--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# DS_Store
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +105,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# API Key Folder
+apikeys/
